syntax = "proto3";

package mechain.meservice;

import "gogoproto/gogo.proto";
import "mechain/meservice/params.proto";
import "mechain/meservice/fixed_deposit.proto";

option go_package = "me-chain/x/meservice/types";

// GenesisState defines the meservice module's genesis state.
message GenesisState {
           Params       params            = 1 [(gogoproto.nullable) = false];
  repeated FixedDeposit fixedDepositList  = 2 [(gogoproto.nullable) = false];
           uint64       fixedDepositCount = 3;
}

